--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+<!-- From finance pset -->
     <form action="/login" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
