--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <tr>
                     <td class="text-start">{{ class.name }}</td>
                     <td class="text-start">{{ class.symbol }}</td>
-                    <button class="btn btn-primary" type="submit">View</button>
+                    <td class="text-start"><button class="btn btn-primary" type="submit">View</button></td>
                 </tr>
             {% endfor %}
         </tbody>
