--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,7 +56,7 @@
         </main>
 
         <footer class="mb-5 small text-center text-muted">
-            Data provided by <a href="https://iexcloud.io/">IEX</a>
+            Created by Alex Geng, Cassie Liu, and William Zhang
         </footer>
 
     </body>
