feat:update html code

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,7 +12,7 @@
                 <tr>
                     <th class="text-start">Code</th>
                     <th class="text-start">Name</th>
-                    <th class="text-start"></th>
+                    <th class="text-start">Edit</th>
                 </tr>
             </thead>
            <tbody>
