--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,7 +56,7 @@
         </main>
 
         <footer class="mb-5 small text-center text-muted">
-            Created by Alex Geng, Cassie Liu, and William Zhang
+            Created by <b>A</b>lex Geng, <b>B</b>illy Zhang, and <b>C</b>assie Liu
         </footer>
 
     </body>
