--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,7 +19,7 @@
                 </tr>
             </thead>
            <tbody>
-            {% for class in class %}
+            {% for class in classes %}
                     <tr>
                         <td class="text-start">{{ class["code"] }}</td>
                         <td class="text-start">{{ class["name"] }}</td>
