--- a/templates/apology.html
+++ b/templates/apology.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block main %}
-    <p style="text-align:center">{{ top }}</p>
+    <p style="text-align:center"><b>Error {{ top }}</b></p>
     <p style="text-align:center">{{ bottom }}</p>
 {% endblock %}
