--- a/static/styles.css
+++ b/static/styles.css
@@ -9,3 +9,8 @@ nav .navbar-brand .red
 {
     color: #A41034;
 }
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #A41034 !important;
+    border: #A41034 !important;
+}
