--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                     <td class="text-start">{{ class.name }}</td>
                     {% if is_admin %}
                         <td class="text-start">
-                            <a href="/edit">
+                            <a href="/edit?code={{ class.code }}">
                                 <button class="btn btn-primary">Edit</button>
                             </a>
                         </td>
