feat:update html code

--- a/templates/create.html
+++ b/templates/create.html
@@ -7,10 +7,10 @@
 {% block main %}
     <form action="/create" method="post">
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="code" placeholder="Class Code" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="code" id="code" placeholder="Class Code" type="text">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="name" placeholder="Class Name" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="name"  id="name" placeholder="Class Name" type="text">
         </div>
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="psets" id="psets" placeholder="# of PSETs" type="number">
