--- a/templates/create.html
+++ b/templates/create.html
@@ -15,47 +15,63 @@
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="psets" id="psets" placeholder="# of PSETs" type="number">
         </div>
-        <button class="btn btn-primary" name="create" type="button" onclick="update()">Create</button>
-        <p></p>
-        <h3></h3>
-        <button class="btn btn-primary" type="submit">Submit</button>     
+        <button class="btn btn-primary" name="create" type="button" onclick="update()">Create</button>  
     </form>
 
     <script>
+        let disabled = false;
         function update(){
-            console.log("called")
+            if (disabled) return;
+            disabled = true;
             // Get number of psets
             let pset_count = document.querySelector("#psets").valueAsNumber;
-            console.log("the pset count is", pset_count)
-            // Create a form dynamically
-            var form = document.createElement("form");
-            form.setAttribute("method", "post");
-            form.setAttribute("action", "submit.php");
+
+            // Update form dynamically
+            var form = document.getElementsByTagName("form")[0];
+
+            var br = document.createElement("br");
+            form.append(br);
 
             for (let i = 0; i < pset_count; i++)
             {
+                // Append line break
+                var br = document.createElement("br");
+                form.append(br);
+
                 // Create an input element for PSET name
                 var name = document.createElement("input");
                 name.setAttribute("type", "text");
                 name.setAttribute("name", "name");
+                name.setAttribute("class", "form-control mx-auto w-auto");
                 name.setAttribute("placeholder", "PSET Name");
  
                 // Create an input element for PSET description
                 var desc = document.createElement("input");
                 desc.setAttribute("type", "text");
                 desc.setAttribute("name", "description");
+                desc.setAttribute("class", "form-control mx-auto w-auto");
                 desc.setAttribute("placeholder", "PSET Description");
 
-                form.append("PSET", i+1)
+                form.append("PSET ", i+1)
 
                 // Append the PSET name input to the form
                 form.append(name);
                
                 // Append the PSET description to the form
                 form.append(desc);
-
-                document.getElementsByTagName("h3")[0].appendChild(form);
             }
+            // Append line break
+            var br = document.createElement("br");
+            form.append(br)
+
+            // Create a submit button
+            var s = document.createElement("input");
+            s.setAttribute("class", "btn btn-primary");
+            s.setAttribute("type", "submit");
+            s.setAttribute("value", "Submit");
+
+            // Append the submit button to the form
+            form.append(s);
         }
     </script>
 {% endblock %}
