--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,15 +5,14 @@
 {% endblock %}
 
 {% block main %}
+<ol>
     {% for pset in psets %}
-        <ol>
-            <li> class="text-start">{{ pset["name"] }} </li>
-            <li> class="text-start">{{ pset["description"] }} </li>
-            <form action="/edit" method="post">
-                <button class="btn btn-primary" type="submit" id="edit-pset">Edit</button>
-                <button class="btn btn-primary" type="submit" id="delete-pset">Delete</button>
-            </form>
-        </ol>
+            <h3>
+                <li class="text-start">{{ pset["name"] }} </li>
+            </h3>
+            <button class="btn btn-primary" type="submit" id="edit-pset">Edit</button>
+            <button class="btn btn-primary" type="submit" id="delete-pset">Delete</button>
     {% endfor %}
+</ol>
     <button class="btn btn-primary" type="submit" id="add-pset">Add PSET</button>
 {% endblock %}
