--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,6 +9,7 @@
         <thead>
             <tr>
                 <th class="text-start">PSET Name</th>
+                <th class="text-start">PSET Description</th>
                 <th class="text-start">Change</th>
             </tr>
         </thead>
@@ -17,66 +18,54 @@
             {% for pset in psets %}
                 <tr>
                     <td class="text-start">{{ pset.name }}</td>
-                    <td>
-                        <button class="btn btn-primary">Edit</button>
-                        <button class="btn btn-primary">Delete</button>
+                    <td class="text-start">{{ pset.description }}</td>
+                    <td class="text-start">
+                        <form action="/edit" method="POST">
+                            <input type="hidden" name="method" value="update" />
+                            <input type="hidden" name="id" value="{{ pset.id }}" />
+                            <input type="hidden" name="code" value="{{ code }}" />
+                            <button class="btn btn-primary" type="submit">Update</button>
+                        </form>
+                        <form action="/edit" method="POST">
+                            <input type="hidden" name="method" value="delete" />
+                            <input type="hidden" name="id" value="{{ pset.id }}" />
+                            <input type="hidden" name="code" value="{{ code }}" />
+                            <button class="btn btn-primary" type="submit">Delete</button>
+                        </form>
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
     
-    <button class="btn btn-primary" type="submit" id="add-pset">Add PSET</button>
+    <form action="/edit" method="POST">
+        <input type="hidden" name="method" value="create" />
+        <input type="hidden" name="id" value="{{ pset.id }}" />
+        <input type="hidden" name="code" value="{{ code }}" />
+        <div class="mb-3">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="name" name="Name" placeholder="PSET Name" type="text">
+        </div>
+        <div class="mb-3">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="description" name="Description" placeholder="PSET Description" type="text">
+        </div>
+        <button class="btn btn-primary" type="submit">Add PSET</button>
+    </form>
 
     <script>
-    let disabled = false;
-        function update(){
-            if (disabled) return;
-            disabled = true;
+        let editButtons = document.getElementsByClassName("edit");
 
-            // Create a form dynamically
-            var form = document.createElement("form");
-            form.setAttribute("method", "post");
-            form.setAttribute("action", "submit.php");
+        function handleEdit(event) {
+            console.log(event.target())
+        }
 
-            var br = document.createElement("br");
-            form.append(br);
+        for (const editButton of editButtons) {
+            editButton.addEventListener('click', handleEdit);
+        }
 
-                // Append line break
-                var br = document.createElement("br");
-                form.append(br);
+        let deleteButtons = document.getElementsByClassName("delete");
 
-                // Create an input element for PSET name
-                var name = document.createElement("input");
-                name.setAttribute("type", "text");
-                name.setAttribute("name", "name");
-                name.setAttribute("class", "form-control mx-auto w-auto");
-                name.setAttribute("placeholder", "PSET Name");
- 
-                // Create an input element for PSET description
-                var desc = document.createElement("input");
-                desc.setAttribute("type", "text");
-                desc.setAttribute("name", "description");
-                desc.setAttribute("class", "form-control mx-auto w-auto");
-                desc.setAttribute("placeholder", "PSET Description");
-
-                // Append the PSET name input to the form
-                form.append(name);
-               
-                // Append the PSET description to the form
-                form.append(desc);
-            }
-            // Append line break
-            var br = document.createElement("br");
-            form.append(br)
-
-            // Create a submit button
-            var s = document.createElement("input");
-            s.setAttribute("class", "btn btn-primary");
-            s.setAttribute("type", "submit");
-            s.setAttribute("value", "Submit");
-
-            // Append the submit button to the form
-            form.append(s);
+        function handleDelete(event) {
+            
+        }
     </script>
 {% endblock %}
