--- a/templates/edit.html
+++ b/templates/edit.html
@@ -42,10 +42,10 @@
         <input type="hidden" name="method" value="create" />
         <input type="hidden" name="code" value="{{ code }}" />
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="name" name="Name" placeholder="PSET Name" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="name" name="name" placeholder="PSET Name" type="text">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="description" name="Description" placeholder="PSET Description" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="description" name="description" placeholder="PSET Description" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Add PSET</button>
     </form>
