feat:update html code

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
+<!-- Based on finance pset -->
+
 <html lang="en">
-
     <head>
-
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, width=device-width">
 
