--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <table class="table table-striped">
+    <table class="table">
         <thead>
             <tr>
                 <th class="text-start">PSET Name</th>
@@ -20,19 +20,44 @@
                     <td class="text-start">{{ pset.name }}</td>
                     <td class="text-start">{{ pset.description }}</td>
                     <td class="text-start">
-                        <form action="/edit" method="POST">
-                            <input type="hidden" name="method" value="update" />
-                            <input type="hidden" name="id" value="{{ pset.id }}" />
-                            <input type="hidden" name="code" value="{{ code }}" />
-                            <button class="btn btn-primary" type="submit">Update</button>
-                        </form>
-                        <form action="/edit" method="POST">
-                            <input type="hidden" name="method" value="delete" />
-                            <input type="hidden" name="id" value="{{ pset.id }}" />
-                            <input type="hidden" name="code" value="{{ code }}" />
-                            <button class="btn btn-primary" type="submit">Delete</button>
-                        </form>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-2">
+                                    <button class="btn btn-primary update pset-id-{{ pset.id }}">Update</button>
+                                </div>
+                                <div class="col-sm-2">
+                                    <form action="/edit" method="POST">
+                                        <input type="hidden" name="method" value="delete" />
+                                        <input type="hidden" name="id" value="{{ pset.id }}" />
+                                        <input type="hidden" name="code" value="{{ code }}" />
+                                        <button class="btn btn-primary" type="submit">Delete</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </td>
+                </tr>
+                <tr hidden class="form-pset-id-{{ pset.id }}">
+                    <form action="/edit" method="POST">
+                        <input type="hidden" name="method" value="update" />
+                        <input type="hidden" name="id" value="{{ pset.id }}" />
+                        <input type="hidden" name="code" value="{{ code }}" />
+                        <td class="text-start">
+                            <input autocomplete="off" class="form-control" id="name" name="name" placeholder="Updated PSET Name" type="text">
+                        </td>
+                        <td class="text-start">
+                            <input autocomplete="off" class="form-control" id="description" name="description" placeholder="Updated PSET Description" type="text">
+                        </td> 
+                        <td class="text-start">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm-2">
+                                        <button class="btn btn-primary" type="submit">Confirm</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                    </form>
                 </tr>
             {% endfor %}
         </tbody>
@@ -41,30 +66,34 @@
     <form action="/edit" method="POST">
         <input type="hidden" name="method" value="create" />
         <input type="hidden" name="code" value="{{ code }}" />
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="name" name="name" placeholder="PSET Name" type="text">
+        <div class="container p-3">
+            <div class="row">
+                <div class="form-group col-sm-6">
+                    <input autocomplete="off" class="form-control" id="name" name="name" placeholder="New PSET Name" type="text">
+                </div>
+                <div class="form-group col-sm-6">
+                    <input autocomplete="off" class="form-control" id="description" name="description" placeholder="New PSET Description" type="text">
+                </div>
+            </div>
         </div>
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="description" name="description" placeholder="PSET Description" type="text">
-        </div>
+
         <button class="btn btn-primary" type="submit">Add PSET</button>
     </form>
 
     <script>
-        let editButtons = document.getElementsByClassName("edit");
+        let updateButtons = document.getElementsByClassName("update");
 
-        function handleEdit(event) {
-            console.log(event.target())
+        function handleUpdate(event) {
+            let target = event.target;
+            let classes = target.className.split(' ');
+            let psetClass = classes[classes.length - 1];
+            let updateForm = document.getElementsByClassName("form-" + psetClass)[0];
+            console.log(updateForm);
+            updateForm.hidden = false;
         }
 
-        for (const editButton of editButtons) {
-            editButton.addEventListener('click', handleEdit);
-        }
-
-        let deleteButtons = document.getElementsByClassName("delete");
-
-        function handleDelete(event) {
-            
+        for (const updateButton of updateButtons) {
+            updateButton.addEventListener('click', handleUpdate);
         }
     </script>
 {% endblock %}
