--- a/templates/edit.html
+++ b/templates/edit.html
@@ -52,7 +52,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-2">
-                                        <button class="btn btn-primary" type="submit">Confirm</button>
+                                        <button class="btn btn-primary confirm" type="submit">Confirm</button>
                                     </div>
                                 </div>
                             </div>
