--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -9,23 +9,63 @@
         <class="text-start">{{ pset.name }}
     </h1>
     <form action="/feedback" method="post">
+        <!-- From https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
         <div>
-            Overall Rating (from worst (1) to best (10)):
-            <input type="range" name="rating">
+            <label for="rating" class="form-label">Overall Rating: </label>
+            <input type="range" min="1" max="10" class="slider" id="rating">
+            <span id="value1"></span>
+        </div>
+        <div>
+            <label for="difficulty" class="form-label">Difficulty: </label>
+            <input type="range" min="1" max="10" class="slider" id="difficulty">
+            <span id="value2"></span>
+        </div>
+        <div>
+            <label for="enjoyment" class="form-label">Enjoyment: </label>
+            <input type="range" min="1" max="10" class="slider" id="enjoyment">
+            <span id="value3"></span>
         </div>
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours" name="hours" placeholder="Hours spent" type="number">
-        </div>
-        <div>
-            Difficulty (from easiest (1) to hardest (10)):
-            <input type="range" name="difficulty">
-        </div>
-        <div>
-            Enjoyment (from least (1) to most (10) enjoyable):
-            <input type="range" name="enjoyment">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours" name="hours" placeholder="Hours Spent:" type="number">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="comments" name="comments" placeholder="Comments" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="comments" name="comments" placeholder="Comments:" type="text">
         </div>
+        <button class="btn btn-primary" name="create" type="button" onclick="update()">Submit</button>  
+        
+        <script> // From https://www.w3schools.com/howto/howto_js_rangeslider.asp
+            // For the overall rating slider
+
+            var slider1 = document.getElementById("rating");
+            var output1 = document.getElementById("value1");
+            output1.innerHTML = slider1.value; // Display the default slider value
+
+            // Update the current slider value (each time you drag the slider handle)
+            slider1.oninput = function() {
+            output1.innerHTML = this.value;
+            }
+
+            // For the difficulty slider
+
+            var slider2 = document.getElementById("difficulty");
+            var output2 = document.getElementById("value2");
+            output2.innerHTML = slider2.value; // Display the default slider value
+
+            // Update the current slider value (each time you drag the slider handle)
+            slider2.oninput = function() {
+            output2.innerHTML = this.value;
+            }
+
+            // For the enjoyment slider
+
+            var slider3 = document.getElementById("enjoyment");
+            var output3 = document.getElementById("value3");
+            output3.innerHTML = slider3.value; // Display the default slider value
+
+            // Update the current slider value (each time you drag the slider handle)
+            slider3.oninput = function() {
+            output3.innerHTML = this.value;
+            }
+        </script>
     </form>
 {% endblock %}
