feat:update html code

--- a/templates/apology.html
+++ b/templates/apology.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+    <!-- Error code and error message displayed -->
     <h1 style="text-align:center">{{ top }}</h1>
     <h2 style="text-align:center">{{ bottom }}</h2>
 {% endblock %}
