chore: edit comments

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -98,6 +98,7 @@
             updateForm.hidden = false;
         }
 
+        // add listener to update buttons
         for (const updateButton of updateButtons) {
             updateButton.addEventListener('click', handleUpdate);
         }
