--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -36,7 +36,7 @@
         <!-- Hours spent -->
         <div class="mb-3">
             <label for="difficulty" class="form-label">Hours Spent:</label>
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours" name="hours" placeholder="10" type="number">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="hours" name="hours" placeholder="Ex: 10" type="number">
         </div>
         <!-- Comments (text input) -->
         <div class="mb-3">
